fix spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -216,8 +216,8 @@ a {
 	background-color: var(--color-dark-brown1);
 	border-radius: 2rem;
 	margin-inline: 7px;
-	margin-left: 0.2em;
-	margin-right: 0.2em;
+	margin-left: 0.4em;
+	margin-right: 0.4em;
 	cursor: pointer;
 	display: flex;
 	justify-content: flex-start;
@@ -1140,16 +1140,20 @@ a {
 	}
 }
 
+.healthcare {
+	margin-bottom: 1em;
+}
+
 .healthcare-title {
 	font-size: var(--fs-xl);
 	font-weight: var(--fw-med);
-	margin: 0 0 0.5em 0;
+	margin: 0 0 1em 0;
 }
 
 .research-title {
 	font-size: var(--fs-xl);
 	font-weight: var(--fw-med);
-	margin: 0 0 0.5em 0;
+	margin: 0 0 1em 0;
 }
 
 .experience-container {
